# libfreedom-deprecated

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: libfreedom.c.B8E59A68C4C60285.idx
include/: libfreedom.h
src/: lib.c  libfreedom.c
